View Issue Details [ Jump to Notes ] | [ Issue History ] [ Print ] |
ID | Project | Category | View Status | Date Submitted | Last Update |
0030206 | Open CASCADE | [OCCT] OCCT:DRAW | public | 2018-10-05 16:03 | 2019-07-19 17:27 |
|
Reporter | msv | |
Assigned To | emv | |
Priority | normal | Severity | tweak | |
Status | new | Resolution | open | |
Platform | | OS | | OS Version | |
Product Version | [OCCT] 7.3.0 | |
Target Version | [OCCT] 7.5.0* | Fixed in Version | | |
|
Summary | 0030206: Improve API of commands bbop and bapibop |
Description | Improve API of commands bbop and bapibop so that it was possible to use symbolic names of operations instead of integer type. |
Steps To Reproduce | N/A |
Tags | No tags attached. |
|
Test case number | |
|
Attached Files | |
|